Fix git info, sidebar remove, preview scrollbars, path bar branch

--- a/static/style.css
+++ b/static/style.css
@@ -876,7 +876,7 @@ body {
 
 /* File preview panel */
 
-.file-preview-panel {
+.column.file-preview-panel {
   min-width: 300px;
   flex-grow: 1;
   display: flex;
